--- a/Cadastro_Clientes/src/main/resources/application.properties
+++ b/Cadastro_Clientes/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Cadastro_Clientes_DB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.thymeleaf.cache = false
